--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,16 +44,13 @@
   </head>
 
   <body>
-    	<div class="alert">
-	    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-       <strong>1 Active</strong> Weather Alert
-     </div>
-
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>{{ site.title | default: site.github.repository_name }}</h1>
             <h2>{{ site.description | default: site.github.project_tagline }}</h2>
+			<br>
+			<h2>1 Active Weather Alert</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
