--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,12 +44,14 @@
   </head>
 
   <body>
+    <a id="forkme_banner">Not Related to NWS</a>
+    <div class="shell">
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>{{ site.title | default: site.github.repository_name }}</h1>
             <h2>{{ site.description | default: site.github.project_tagline }}</h2>
-			<br>
+			<span />
 			<h2>1 Active Weather Alert</h2>
           </span>
           <span class="left-tail"></span>
